# geotab-ace-mcp-demo

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  auth_test.py  duckdb_manager.py  geotab_ace.py  geotab_mcp_server.py  memory_manager.py  pyproject.toml  readme.md  requirements.txt  test_duckdb.py  test_memory.py  test_multi_account.py
.claude/: mcp-config.example.json
.claude/skills/: geotab-fleet-analyst.md
.github/workflows/: ci.yml
docs/: MCP_BEST_PRACTICES.md  MEMORY_SYSTEM_DESIGN.md  api-context.md  improvements.md
geotab_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_mcp_server.py
