[project]
name = "geotab-mcp-server"
version = "0.1.0"
description = "MCP server for Geotab API integration"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "pandas>=1.5.0",
    "python-dotenv>=0.19.0",
    "fastmcp>=2.11.3"
]

[project.scripts]
geotab-mcp-server = "geotab_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"